@@ -1,7 +1,5 @@
 -- $Id$
 
-insert into applications (app_name,app_title,app_enabled,app_tables,app_version) values ('projects','Projects',1,'p_activities,p_projectactivities,p_delivery,p_deliverypos,p_hours,p_invoice,p_invoicepos,p_projectmembers,p_projects','0.8.3.1');
-
 CREATE TABLE p_projects (
    id          serial,
    num         varchar(20) NOT NULL,
