@@ -126,11 +126,19 @@
         $phpgw->db->query("SELECT account_id,account_firstname,account_lastname FROM accounts where "
                         . "account_status != 'L' ORDER BY account_lastname,account_firstname asc");
         while ($phpgw->db->next_record()) {
-           $employee_list .= "<option value=\"" . $phpgw->db->f("account_id") . "\""
-                    . $selected_users[$phpgw->db->f("account_id")] . ">"
+           $employee_list .= "<option value=\"" . $phpgw->db->f("account_id") . "\"";
+        if($phpgw->db->f("account_id")==$phpgw_info["user"]["account_id"])                                                                                                                   
+            $employee_list .= " selected";                                                                                                                                                
+        $employee_list .= ">"                                                                                                                                                             
+                    . $phpgw->common->display_fullname($phpgw->db->f("account_id"),                                                                                                          
+                      $phpgw->db->f("account_firstname"),                                                                                                                                    
+                      $phpgw->db->f("account_lastname")) . "</option>";
+
+
+/*                    . $selected_users[$phpgw->db->f("account_id")] . ">"
 	            . $phpgw->common->display_fullname($phpgw->db->f("account_id"),
                       $phpgw->db->f("account_firstname"),
-                      $phpgw->db->f("account_lastname")) . "</option>";
+                      $phpgw->db->f("account_lastname")) . "</option>"; */
         }
         $t->set_var("employee_list",$employee_list);
 
