@@ -18,3 +18,5 @@
 12/10/2000: create function to make sure if created invoice or delivery before printing them
 12/20/2000: update preferences
 12/22/2000: included call to function strip_html()  
+01/16/2001: updated coordinator/employee_select to display the current user at first when adding a project/hours
+            fixed delivery/invoice error when trying to save a delivery/invoice a second time with the same ID
